GUI panel for MIDI import
Former-commit-id: bfb9eaa979b8dab0c975838227ef45ba44639195

--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -128,5 +128,6 @@
         <file>schema/musicxml.xsd</file>
         <file>schema/xlink.xsd</file>
         <file>schema/xml.xsd</file>
+        <file>data/close_icon_small.png</file>
     </qresource>
 </RCC>
