--- a/mscore/prefsdialog.ui
+++ b/mscore/prefsdialog.ui
@@ -326,6 +326,13 @@
             </property>
            </widget>
           </item>
+          <item row="3" column="1">
+           <widget class="QCheckBox" name="midiImportShow">
+            <property name="text">
+             <string>Show Midi Import Panel</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
