Fix #20915 - Weird behaviour of "Reset to default" buttons in "Preference | Shortcuts"
The loadDefaultShortcuts() function in mscore/shortcut.cpp was not populating the list it returns.

Also:
- Made labels for "Reset to Default" buttons more explicit.
- Added (temporarily?) support for the <code> tag to loadDefaultShortcuts(), until the patch with "NumPad" support is merged (pull request 315), which makes the <code> tag obsolete.

Former-commit-id: f17f02c42a78e0301af58dbea100ece968eeb209

--- a/mscore/prefsdialog.ui
+++ b/mscore/prefsdialog.ui
@@ -34,7 +34,7 @@
      <item>
       <widget class="QPushButton" name="resetToDefault">
        <property name="text">
-        <string>Reset to Default</string>
+        <string>Reset All Preferences to Default</string>
        </property>
       </widget>
      </item>
@@ -2661,7 +2661,7 @@
          <item>
           <widget class="QPushButton" name="resetShortcut">
            <property name="text">
-            <string>Reset to Default</string>
+            <string>Reset Shortcut to Default</string>
            </property>
           </widget>
          </item>
