--- a/mscore/stafftype.ui
+++ b/mscore/stafftype.ui
@@ -28,7 +28,7 @@
      <item>
       <widget class="QListWidget" name="staffTypeList">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+        <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
