--- a/mscore/textstyle.ui
+++ b/mscore/textstyle.ui
@@ -17,7 +17,7 @@
    <item row="0" column="0">
     <widget class="QListWidget" name="textNames">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
