Fix MIDI instrument names
Former-commit-id: 9d84de80c4df210f02264f09998c1239543e7835

--- a/mscore/importmidi_panel.ui
+++ b/mscore/importmidi_panel.ui
@@ -123,7 +123,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEditMidiFile"/>
+      <widget class="QLineEdit" name="lineEditMidiFile">
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
