add align-vertical-baseline icon, fix alignment icons in Style->Text
Former-commit-id: 40594b788b390cbabe1fbbba71a51127695c7235

--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -129,5 +129,6 @@
         <file>data/icons-dark/format-indent-less.svg</file>
         <file>data/icons-dark/format-indent-more.svg</file>
         <file>data/icons-dark/toggle-metronome.svg</file>
+        <file>data/icons-dark/align-vertical-baseline.svg</file>
     </qresource>
 </RCC>
