--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -127,6 +127,11 @@
       <file>data/icons-dark/format-indent-more.svg</file>
       <file>data/icons-dark/toggle-metronome.svg</file>
       <file>data/icons-dark/align-vertical-baseline.svg</file>
+      <file>data/icons-dark/go-home.svg</file>
+      <file>data/icons-dark/go-next.svg</file>
+      <file>data/icons-dark/go-previous.svg</file>
+      <file>data/icons-dark/help-contents.svg</file>
+      <file>data/icons-dark/view-refresh.svg</file>
 
       <file>schema/license.html</file>
       <file>schema/musicxml.xsd</file>
