Any instrument which does not have string data is given a default guitar-like string set.
Changed to a default empty string set.

This also allows to filter out TAB staff types in staff props dlg box for an instrument without strings defined.


Former-commit-id: 537501f90de12a4c4534242d3075d040366ab252

--- a/mscore/editstringdata.ui
+++ b/mscore/editstringdata.ui
@@ -118,7 +118,10 @@
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
          <property name="minimum">
-          <number>1</number>
+          <number>0</number>
+         </property>
+         <property name="value">
+          <number>0</number>
          </property>
         </widget>
        </item>
