--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -61,7 +61,7 @@
       <file>data/icons-dark/fframe.svg</file>
       <file>data/icons-dark/measure.svg</file>
       <file>data/icons-dark/checkmark.svg</file>
-      <file>data/close_icon_small.png</file>
+      <file>data/close.png</file>
 
       <file>data/icons-dark/align-vertical-bottom.svg</file>
       <file>data/icons-dark/align-vertical-center.svg</file>
