Add support for parentheses before/after chords.
This allows a chord or sequence of chords to be indicated as optional
or alternative, and avoids the need to add the parentheses as text
or extra chords.


Former-commit-id: 688495bc27a7755d3d3e9e8e91134529f906519e

--- a/mscore/harmony.ui
+++ b/mscore/harmony.ui
@@ -146,6 +146,30 @@
        </layout>
       </item>
       <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
+        <item>
+         <widget class="QCheckBox" name="leftParen">
+          <property name="text">
+           <string>Left Paren Before</string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="rightParen">
+          <property name="text">
+           <string>Right Paren After</string>
+          </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <widget class="QLabel" name="label_5">
